--- a/index.html
+++ b/index.html
@@ -28,11 +28,20 @@
         </form>
     </header>
     <main class="page-content">
+        <!-- Create Task List-->
         <section class="task-list-wrapper">
             <h2 class="list-title">Tasks to Do</h2>
-            <ul class="task-list" id="tasks-to-do">
-                <li class="task-item">A task is going to be added soon!</li>
-            </ul>
+            <ul class="task-list" id="tasks-to-do"></ul>
+        </section>
+        <!--Tasks in Progress-->
+        <section class="task-list-wrapper">
+            <h2 class="list-title">Tasks in Progress</h2>
+            <ul class="task-list" id="tasks-in-progress"></ul>
+        </section>
+        <!--Tasks Completed-->
+        <section class="task-list-wrapper">
+            <h2 class="list-title">Tasks Completed</h2>
+            <ul class="task-list" id="tasks-completed"></ul>
         </section>
     </main>
 
