--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </form>
     </header>
-    <main class="page-content">
+    <main class="page-content" id="page-content">
         <!-- Create Task List-->
         <section class="task-list-wrapper">
             <h2 class="list-title">Tasks to Do</h2>
