--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <div class="form-group">
                 <select name="task-type" class="select-dropdown">
                     <option value="" disabled selected>Pick a task type</option>
-                    <option value="Print">Print</option>
-                    <option value="Web">Web</option>
-                    <option value="Mobile">Mobile</option>
+                    <option value="Chores">Chores</option>
+                    <option value="Personal">Personal</option>
+                    <option value="Classwork">Classwork</option>
                 </select>
             </div>
             <div class="form-group">
