changed Classwork to Work

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <option value="" disabled selected>Pick a task type</option>
                     <option value="Chores">Chores</option>
                     <option value="Personal">Personal</option>
-                    <option value="Classwork">Classwork</option>
+                    <option value="Work">Work</option>
                 </select>
             </div>
             <div class="form-group">
